--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,8 @@
 @import 'layout/footer';
 @import 'layout/sidebar';
 @import 'layout/forms';
+@import 'layout/navbar';
 @import 'components/buttons';
 @import 'components/dropdown';
 @import 'components/navigation';
+@import 'components/inputs';
