--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -13,4 +13,7 @@ $screen-small : 400px;
 $screen-medium : 760px;
 $screen-large: 1000px;
 
+$container-padding: 3em 3em;
+$container-padding-small: 3em 15px;
+
 
