--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -1,9 +1,9 @@
 .container {
     display: flex;
     justify-content: space-between;
-    padding: 2em 3em;
+    padding: $container-padding;
     @media screen and (max-width: $screen-small){
-        padding: 2em 15px;
+        padding: $container-padding-small;
     }
 }
 
