--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,10 @@
 * {
-    color: $secondary;
+    color: black;
+}
+
+.primary-header {
+    width: 100%;
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
