--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -7,6 +7,15 @@
     }
 }
 
+.row {
+    width: 100%;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
 
 
 
