--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,57 +1,15 @@
-.slider-wrapper {
-    position: relative;
+.slider-wrapper, .slider {
     width: 100%;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
+
 }
 
-.slider, .slide-content, .slider-wrapper {
-    width: 100%;
-    height: 90vh;
-}
-
-.slide {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    filter: brightness(90%);
-}
-
-@for $i from 1 to 4 {
-    .slide#{$i} {
-        background-image: url("../img/image#{$i}.jpg")
+.slider {
+    
+    img {
+        width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: auto;
     }
-}
-
-.slide-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    span {
-        font-size: 5rem;
-        color: white;
-    }
-}
-
-.arrow {
-    cursor: pointer;
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    z-index: 2;
-    color: white;
-}
-
-#arrow-left {
-    left: 0;
-    margin-left: 30px;
-}
-
-#arrow-right {
-    right: 0;
-    margin-right: 60px; 
 }
