--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -14,6 +14,65 @@
     margin-right: auto;
     display: flex;
     justify-content: space-around;
+    padding: 10px;
+}
+
+.row-special {
+    width: 100%;
+    padding: 2em 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.col {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.col-1 {
+    width: 10%;
+}
+
+.col-2 {
+    width: 24%;
+}
+
+.col-3 {
+    width: 40%;
+}
+
+.col-content {
+    margin-left: 5vh;
+    margin-right: 5vh;
+}
+
+
+@media screen and (max-width: 1050px) {
+    .row {
+        justify-content: center;
+        flex-direction: column;
+    }
+    .col {
+        width: 90%;
+        margin-top: 100px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .col-content {
+        margin-left: 10vh;
+        margin-right: 10vh;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .col {
+        width: 90%;
+    }
+
+    .col-content {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
 }
 
 
