--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,7 +1,14 @@
+.nav-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .nav-item {
     padding: 10px 20px;
     border: 2px solid gray;
     margin-top: 5px;
+    width: 300px;
     &:hover{
         cursor: pointer;
         color: blue;
