add some section to main page

--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -1,5 +1,4 @@
 .container {
-    display: flex;
     justify-content: space-between;
     padding: $container-padding;
     @media screen and (max-width: $screen-small){
@@ -7,9 +6,15 @@
     }
 }
 
+.col-orange {
+    background: $primary-orange;
+    box-shadow: 0px 2px 8px 0px $secondary;
+}
+
+
 .row {
     width: 100%;
-    max-width: 1600px;
+    max-width: 1400px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -44,7 +49,11 @@
 .col-content {
     margin-left: 5vh;
     margin-right: 5vh;
+    padding-top: 0.5rem;
+    padding-bottom: 2rem;
 }
+
+
 
 
 @media screen and (max-width: 1050px) {
@@ -72,6 +81,19 @@
     .col-content {
         margin-left: 20px;
         margin-right: 20px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .row {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .col-orange {
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
     }
 }
 
