--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'layout/sidebar';
 @import 'layout/forms';
 @import 'layout/navbar';
+@import 'layout/aboutus';
 @import 'components/buttons';
 @import 'components/dropdown';
 @import 'components/navigation';
