--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -1,9 +1,15 @@
 .container {
-    justify-content: space-between;
     padding: $container-padding;
     @media screen and (max-width: $screen-small){
         padding: $container-padding-small;
     }
+}
+
+.column {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .col-orange {
@@ -52,8 +58,6 @@
     padding-top: 0.5rem;
     padding-bottom: 2rem;
 }
-
-
 
 
 @media screen and (max-width: 1050px) {
