--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -29,7 +29,12 @@
 }
 
 .short-row {
-    @extend .row;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
     max-width: 600px;
 }
 
