--- a/sass/layout/_offer.scss
+++ b/sass/layout/_offer.scss
@@ -2,8 +2,8 @@
     background: $secondary;
     padding: 8px;
 }
-
 .to-offer {
     border: 1px solid $primary-orange;
     padding: 2px 6px;
+    color: $primary-orange;
 }
