--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -1,3 +1,7 @@
+body {
+    position: relative;
+}
+
 .container {
     padding: $container-padding;
     @media screen and (max-width: $screen-small){
