--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'layout/navbar';
 @import 'layout/aboutus';
 @import 'layout/offer';
+@import 'components/flyingicons';
 @import 'components/buttons';
 @import 'components/dropdown';
 @import 'components/navigation';
