add references section

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -66,6 +66,11 @@ p {
     margin-bottom: 4rem;
 }
 
+.short-paragraph {
+    @extend .section-paragraph;
+    max-width: 800px;
+}
+
 @media screen and (max-width: 950px) {
     .section-paragraph {
         padding: 0 3rem;
