fix smooth scrolling

--- a/sass/layout/_references.scss
+++ b/sass/layout/_references.scss
@@ -16,6 +16,12 @@
     @extend .col-orange;
 }
 
+@media screen and (max-width: 900px) {
+    .reference {
+        flex-direction: column;
+    }
+}
+
 .references {
     margin-top: 1rem;
     margin-bottom: 1rem;
