finished main page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'layout/aboutus';
 @import 'layout/offer';
 @import 'layout/references';
+@import 'layout/contact';
 @import 'components/flyingicons';
 @import 'components/buttons';
 @import 'components/dropdown';
