--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -21,6 +21,11 @@ body {
     box-shadow: 0px 2px 8px 0px $secondary;
 }
 
+.section {
+    h1,h2,h3,h4,h5,h6 {
+        text-align: center;
+    }
+}
 
 .row {
     width: 100%;
