--- a/sass/components/_flyingicons.scss
+++ b/sass/components/_flyingicons.scss
@@ -3,7 +3,7 @@
     left: 10vh;
     top: calc(50vh - 50px);
     span {
-        color: $primary-blue;
+        color: $secondary-blue;
         &:hover {
             cursor: pointer;
         }
