--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -3,7 +3,8 @@ $primary: white;
 $secondary: #364135;
 $third: rgb(179, 179, 179);
 $primary-orange: #F36E1E;
-$primary-blue: #3575B8;
+$primary-blue: #6BB3DC;
+$secondary-blue: #3575B8;
 
 /*** USABLE VARIABLES ***/
 
