--- a/sass/layout/_aboutus.scss
+++ b/sass/layout/_aboutus.scss
@@ -1,6 +1,6 @@
 #about_us {
     width: 100%;
-    background: linear-gradient(-30deg, $third 0%,$third 95.5%,$primary-blue 95.6%,$primary-blue 100%);
+    background: linear-gradient(-30deg, $third 0%,$third 95.5%,$secondary-blue 95.6%,$secondary-blue 100%);
     border: 1px solid $third;
     box-shadow: 0px 0px 8px 0px $third;
 }
