finished styles on main page

--- a/sass/layout/_download-contact.scss
+++ b/sass/layout/_download-contact.scss
@@ -5,3 +5,8 @@
     min-width: 200px;
     margin-top: 10px;
 }
+
+#download-contact {
+    background: $download_contact-background;
+    color: $download_contact-color;
+}
