--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 footer {
-    background: $primary;
+    background: $footer-background;
+    color: $footer-color;
     padding: 3em 0;
     span {
         margin-left: 15px;
