--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -5,6 +5,7 @@
 }
 
 .search {
-    color: $secondary !important;
+    color: $nav-color;
     border-color: $secondary; 
+    background: $nav-background;
 }
