--- a/sass/layout/_references.scss
+++ b/sass/layout/_references.scss
@@ -28,7 +28,8 @@
 }
 
 #references {
-    background: $third;
+    background: $references-background;
+    color: $references-color;
     h1 {
         text-align: center;
     }
