--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,8 @@
 @import 'layout/aboutus';
 @import 'layout/offer';
 @import 'layout/references';
-@import 'layout/contact';
+@import 'layout/download-contact';
+@import 'layout/materials';
 @import 'components/flyingicons';
 @import 'components/buttons';
 @import 'components/dropdown';
