--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -31,4 +31,18 @@ $screen-large: 1000px;
 $container-padding: 3em 3em;
 $container-padding-small: 3em 15px;
 
+/*** Backgorund and colors on main page ***/
+$nav-background: $primary;
+$about_us-background: linear-gradient(-30deg, $third 0%,$third 95.5%,$secondary-blue 95.6%,$secondary-blue 100%);
+$materials-background: $primary;
+$references-background: $third;
+$download_contact-background: $third;
+$footer-background: $primary;
+
+$nav-color: $secondary;
+$about_us-color: $secondary;
+$materials-color: $secondary;
+$references-color: $secondary;
+$download_contact-color: $primary;
+$footer-color: $secondary;
 
