--- a/sass/layout/_references.scss
+++ b/sass/layout/_references.scss
@@ -30,6 +30,7 @@
 #references {
     background: $references-background;
     color: $references-color;
+    box-shadow: 0px 0px 8px 0px $third;
     h1 {
         text-align: center;
     }
