add some good stuff

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,37 +11,37 @@ h1,h2,h3,h4,h5,h6 {
 
 h1 {
     font-size: $h1-default-size;
-    margin-bottom: 2rem;
+    margin-bottom: 0.5rem;
     margin-top: 2rem;
 }
 
 h2 {
     font-size: $h2-default-size;
-    margin-bottom: 1.8rem;
+    margin-bottom: 0.5rem;
     margin-top: 1.8rem;
 }
 
 h3 {
     font-size: $h3-default-size;
-    margin-bottom: 1.6rem;
+    margin-bottom: 0.5rem;
     margin-top: 1.6rem;
 }
 
 h4 {
     font-size: $h4-default-size;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.4rem;
     margin-top: 1.5rem;
 }
 
 h5 {
     font-size: $h5-default-size;
-    margin-bottom: 1.2rem;
+    margin-bottom: 0.4rem;
     margin-top: 1.2rem;
 }
 
 h6 {
     font-size: $h6-default-size;
-    margin-bottom: 1rem;
+    margin-bottom: 0.4rem;
     margin-top: 1rem;
 }
 
@@ -63,12 +63,12 @@ p {
 .section-paragraph {
     padding: 0 8rem;
     max-width: 1200px;
-    margin-bottom: 4rem;
+    margin-top: 2rem;
 }
 
 .short-paragraph {
-    @extend .section-paragraph;
-    max-width: 800px;
+    max-width: 900px;
+    padding: 0 4rem;
 }
 
 @media screen and (max-width: 950px) {
@@ -82,3 +82,36 @@ p {
         padding: 0;
     }
 }
+
+p.first-paragraph {            
+    &::first-letter {
+    font-size: 200%;
+    padding: 0 5px;
+    background-color: $primary-orange;
+;
+    color: $secondary;
+}
+
+}
+
+blockquote {
+    background:$primary;
+    border-left:8px solid $secondary-blue;
+    box-shadow:0 3px 15px rgba(0,0,0,.15);
+    color:$secondary;
+    font-size:1.1em;
+    font-style:italic;
+    font-weight:300;
+    line-height:1.6;
+    margin:50px auto;
+    padding:1.2em 30px 1.2em 60px;
+    position:relative;
+    vertical-align:super;
+    width:100%;
+    z-index: 0;
+    overflow: hidden;
+    }
+
+    blockquote span {
+        
+        }
