--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     background: $footer-background;
     color: $footer-color;
-    padding: 3em 0;
+    padding: 3em 0 !important;
     span {
         margin-left: 15px;
     }
