--- a/sass/layout/_references.scss
+++ b/sass/layout/_references.scss
@@ -10,10 +10,8 @@
     width: 100%;
     display: flex;
     align-items: center;
-    padding: 2rem 1rem;
-    background: $primary-orange;
+    background: $primary;
     margin-bottom: 20px;
-    @extend .col-orange;
 }
 
 @media screen and (max-width: 900px) {
@@ -33,5 +31,20 @@
     box-shadow: 0px 0px 8px 0px $third;
     h1 {
         text-align: center;
+    }
+}
+
+.person {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 200px;
+    span {
+        color:$secondary-blue;
+        display:block;
+        font-size:1.4em;
+        font-weight:300;
+        letter-spacing:1px;
+        margin-top:.5em;
     }
 }
