--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,10 @@
 footer {
     background: $footer-background;
     color: $footer-color;
-    padding: 3em 0 !important;
+    padding: 3em 3em !important;
+    @media screen and (max-width: 500px){
+        padding: 1em 1em !important;
+    }
     span {
         margin-left: 15px;
     }
