try to make own

--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -1,151 +1,11 @@
-body {
-    position: relative;
-}
-
 .container {
-    padding: $container-padding;
-    @media screen and (max-width: $screen-small){
-        padding: $container-padding-small;
-    }
-}
-
-.column {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.col-orange {
-    background: $primary-orange;
-    box-shadow: 0px 2px 8px 0px $secondary;
-}
-
-.col-blue {
-    background: $primary-blue;
-    box-shadow: 0px 2px 8px 0px $secondary;
-}
-
-.col-reverse {
-    * {
-        color: $primary !important;
-    }
-    background: $secondary !important;
-}
-
-.section {
-    h1,h2,h3,h4,h5,h6 {
-        text-align: center;
-    }
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .row {
     width: 100%;
-    max-width: 1400px;
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
-    justify-content: space-around;
-    padding: 10px;
+    padding: 2rem 3rem;
 }
-
-.short-row {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    max-width: 600px;
-}
-
-.row-special {
-    width: 100%;
-    padding: 2em 1em;
-    display: flex;
-    justify-content: space-between;
-}
-
-.col {
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.col-1 {
-    width: 10%;
-}
-
-.col-2 {
-    width: 24%;
-}
-
-.col-3 {
-    width: 40%;
-}
-
-
-
-.col-content {
-    margin-left: 5vh;
-    margin-right: 5vh;
-    padding-top: 0.5rem;
-    padding-bottom: 2rem;
-}
-
-
-@media screen and (max-width: 1050px) {
-    .row {
-        justify-content: center;
-        flex-direction: column;
-    }
-    .col {
-        width: 90%;
-        margin-top: 40px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .col-content {
-        margin-left: 5rem;
-        margin-right: 5rem;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .col {
-        width: 90%;
-    }
-
-    .col-content {
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    .row {
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .col-orange {
-        margin-left: 0 !important; 
-        margin-right: 0 !important;
-        width: 100%;
-    }
-}
-
-.sticky {
-     position: -webkit-sticky;
-     position: -moz-sticky;
-     position: -o-sticky;
-     position: -ms-sticky;
-     position: sticky;
-     top: 0;
-     z-index: 2;
-}
-
-
-
-
-
-
