--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,13 +9,12 @@
 @import 'layout/forms';
 @import 'layout/navbar';
 @import 'layout/aboutus';
-@import 'layout/offer';
+@import 'layout/contact';
 @import 'layout/references';
 @import 'layout/download-contact';
 @import 'layout/materials';
 @import 'components/flyingicons';
 @import 'components/buttons';
 @import 'components/dropdown';
-@import 'components/navigation';
 @import 'components/inputs';
 @import 'components/slider';
