--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,10 +1,11 @@
 .slider {
     position: relative;
+    height: calc(70vh - 10px);
 }
 
 .slide {
     width: 100%;
-    height: 400px;
+    height: calc(70vh - 10px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,6 +14,7 @@
     background-size: 100%;
     position: absolute;
     top: 0;
+    backdrop-filter: blur(5px);
 }
 
 #first {
@@ -28,4 +30,34 @@
 #third {
     background-image: url('./../assets/img/img3.jpeg');
     left: -100%;
+}
+
+.arrow {
+    position: absolute;
+    top: 50%;
+    color: white;
+    z-index: 2;
+}
+
+.arrow-left {
+    left: 0;
+}
+
+.arrow-right {
+    right: 0;
+}
+
+.black {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: black;
+    opacity: 0.4;
+}
+
+.content {
+    color: white;
+    position: relative;
+    z-index: 2;
 }
