--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -4,8 +4,68 @@
     margin-right: auto;
 }
 
+.container-fluid {
+    @extend .container;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+}
+
 .row {
     width: 100%;
     display: flex;
+    justify-content: flex-start;
+    align-items: center;
     padding: 2rem 3rem;
+}
+
+.col {
+    padding: 1rem;
+}
+
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 24.99%;
+}
+
+.col-4 {
+    width: 33.33%;
+}
+
+.col-5 {
+    width: 41%;
+}
+
+.col-6 {
+    width: 49%;
+}
+
+.col-7 {
+    width: 57%;
+}
+
+.col-8 {
+    width: 65%;
+}
+
+.col-9 {
+    width: 73%;
+}
+
+.col-10 {
+    width: 81%;
+}
+
+.col-11 {
+    width: 89%;
+}
+
+.col-12 {
+    width: 100%;
 }
