--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,11 +1,12 @@
 .slider {
     position: relative;
-    height: calc(70vh - 10px);
+    height: calc(75vh);
+    //box-shadow: 0px 0px 6px 0px black;
 }
 
 .slide {
     width: 100%;
-    height: calc(70vh - 10px);
+    height: calc(75vh);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,6 +16,10 @@
     position: absolute;
     top: 0;
     backdrop-filter: blur(5px);
+}
+
+.slide-inside {
+    position: relative;
 }
 
 #first {
@@ -53,7 +58,7 @@
     height: 100%;
     z-index: 1;
     background: black;
-    opacity: 0.4;
+    opacity: 0.1;
 }
 
 .content {
