--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,6 +1,13 @@
 nav {
     border-top: 1px solid $primary;
     justify-content: space-between;
+    position: absolute;
+    z-index: 2;
+    box-shadow: 0px 3px 4px 0px white;
+}
+
+.nav {
+    justify-content: space-between;
 }
 
 .navigation {
@@ -12,12 +19,13 @@ nav {
         &:hover {
             cursor: pointer;
             a {
-                color: $secondary; 
+                color: orange;
             }
         }
         a {
-            color: $primary;
+            color: $background;
             font-size: 24px;
+            font-weight: bold;
         }
         padding: 20px;
     }
